<resources>
    <string name="app_name" translatable="false">Cinémathèque</string>
    <string name="welcometext">Create your own home film library!</string>
    <string name="beginButton">Start</string>
    <string name="textfieldhint1">Name</string>
    <string name="ageHint">Age</string>
    <string name="closebtn">Close</string>
    <string name="myLibrary">My Library</string>
    <string name="searchFilm">Search movie…</string>
    <string name="addFilm">Add movie</string>
    <string name="saveFilm">Save movie</string>
    <string name="genre">Genre</string>
    <string name="back">Back</string>
    <string name="movieName">Movie name</string>
    <string name="year">Year</string>
    <string name="movieDescription">Movie description</string>
    <string name="select_poster">Select poster</string>
    <string name="description">Description</string>
    <string name="drawer_open">Open navigation bar</string>
    <string name="drawer_close">Close navigation bar</string>
    <string name="nav_all_movies">All movies</string>
    <string name="nav_explore">Overview</string> <!-- Элемент для перехода на Activity 2 -->
    <string name="nav_wishlist">Watch later</string>
    <string name="nav_about">About</string>
    <string-array name="movie_categories">
        <item>All movies</item>
        <item>Watch later</item>
        <item>Comedies</item>
        <item>Action movies</item>
        <item>Science fiction</item>
    </string-array>
    <string-array name="movie_genres">
        <item>Choose genre...</item> <!-- Подсказка -->
        <item>Action</item>
        <item>Comedy</item>
        <item>Drama</item>
        <item>Science fiction</item>
        <item>Thriller</item>
        <item>Horror</item>
        <item>Melodrama</item>
        <item>Adventure</item>
        <item>Other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_movie" />
</resources>