<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_movies"
            android:icon="@drawable/apps_24dp_b46643_fill0_wght400_grad0_opsz24"
        android:title="@string/nav_all_movies" />
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/overview_key_24dp_b46643_fill0_wght400_grad0_opsz24"
        android:title="@string/nav_explore" />
        <item
            android:id="@+id/nav_wishlist"
            android:icon="@drawable/nest_clock_farsight_analog_24dp_b46643_fill0_wght400_grad0_opsz24"
        android:title="@string/nav_wishlist" />
    </group>

    <item android:title="Другое">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/baseline_question_mark_24"
            android:title="@string/nav_about" />
        </menu>
    </item>

</menu>